@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -63,6 +63,7 @@ void bindTypedStateComponents()
 	bindTypedStateComponent< CullingSpaceStateComponent >( "CullingSpaceStateComponent" );
 	bindTypedStateComponent< CullingBoxStateComponent >( "CullingBoxStateComponent" );
 	bindTypedStateComponent< ProceduralThreadingStateComponent >( "ProceduralThreadingStateComponent" );
+	bindTypedStateComponent< CameraVisibilityStateComponent >( "CameraVisibilityStateComponent" );
 
 	enum_<GLPointsUsage>( "GLPointsUsage" )
 		.value( "ForPointsOnly", ForPointsOnly )
