@@ -1,3 +1,7 @@
+Additions :
+
+* IECoreGL::Renderer class now supports the "gl:visibility:camera" attribute.
+
 Bug fixes :
 
 * PointDistributionOp density parameter no longer accepts negative values.
